# simple_request

./: .bazelrc  BUILD  MODULE.bazel  bazel-bin  bazel-directpath_bazel_eef2  bazel-directpath_bazel_eef_working  bazel-out  bazel-testlogs  bootstrap.json  build_and_copy_grpc_gcp.sh  copy_deps.sh  disable_drop_directpath_packets.sh  enable_drop_directpath_packets.sh  package-lock.json  run_after_modifying_java_spanner.sh  setup_java_spanner_deps.sh
src/main/java/com/google/spanner/cloud/rain/: BUILD  SimpleRequest.java
src/main/resources/: BUILD
