"Bazel Module for Spanner Rain Workload Server"

module(name = "rain")

bazel_dep(name = "googleapis", version = "0.0.0-20250826-a92cee39")
bazel_dep(name = "grpc-java", version = "1.71.0")
bazel_dep(name = "protobuf", version = "29.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "rules_java", version = "7.8.0")
bazel_dep(name = "googleapis-java", version = "1.0.0")

switched_rules = use_extension("@googleapis//:extensions.bzl", "switched_rules")
switched_rules.use_languages(java = True)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.cloud:google-cloud-spanner:6.100.0",
        "io.grpc:grpc-alts:1.71.0",
        "io.grpc:grpc-rls:1.71.0",
        "com.google.protobuf:protobuf-java:4.29.0",
        "com.google.cloud:google-cloud-core:2.46.0",
        "org.conscrypt:conscrypt-openjdk:2.5.2",
        "org.apache.commons:commons-math3:3.6.1",
        "commons-cli:commons-cli:1.5.0",
        "com.google.api:gax:2.68.2",
        "com.google.api:gax-grpc:2.68.2",
        "com.google.api.grpc:proto-google-cloud-spanner-admin-database-v1:6.100.0",
        "com.google.api.grpc:proto-google-cloud-spanner-admin-instance-v1:6.100.0",
        "com.google.api.grpc:proto-google-cloud-spanner-v1:6.100.0",
        "com.google.flogger:flogger:0.8",
        "com.google.flogger:flogger-system-backend:0.8",
        "com.google.cloud:google-cloud-servicedirectory:2.60.0",
        "com.google.api.grpc:proto-google-cloud-servicedirectory-v1:2.60.0",
        "io.grpc:grpc-opentelemetry:1.71.0",
        "io.kubernetes:client-java:24.0.0",
        "io.kubernetes:client-java-api:24.0.0",
        #"io.opentelemetry:opentelemetry-bom:1.49.0",
        #"io.opentelemetry:opentelemetry-api:1.49.0",
        #"io.opentelemetry:opentelemetry-context:1.49.0",
        #"io.opentelemetry:opentelemetry-sdk:1.49.0",
        #"io.opentelemetry:opentelemetry-sdk-common:1.49.0",
        #"io.opentelemetry:opentelemetry-sdk-metrics:1.49.0",
        #"io.opentelemetry:opentelemetry-sdk-trace:1.49.0",
        #"io.opentelemetry:opentelemetry-exporter-otlp:1.49.0",
        "com.google.cloud.opentelemetry:exporter-trace:0.34.0",
        "com.google.cloud.opentelemetry:exporter-metrics:0.34.0",
        "org.mockito:mockito-core:5.20.0",
        "com.google.auto.value:auto-value-annotations:1.10.4",
        "org.apache.commons:commons-lang3:3.14.0",
        "com.google.auto.value:auto-value:1.11.0",
        "io.grpc:grpc-census:1.71.0",
        "io.opencensus:opencensus-api:0.31.1",
        "io.opencensus:opencensus-contrib-grpc-util:0.31.1",
        "io.opencensus:opencensus-exporter-stats-stackdriver:0.31.1",
        "io.opencensus:opencensus-exporter-trace-stackdriver:0.31.1",
        "com.google.api.grpc:proto-google-common-protos:2.63.1",
        "io.opencensus:opencensus-contrib-grpc-metrics:0.31.1",
    ],
    generate_compat_repositories = True,
    repositories = [
        "https://repo.maven.apache.org/maven2/",
    ],
    strict_visibility = False,
)
use_repo(maven, "maven")
